# GOST-R-34.12-2015

./: .gitignore  CMakeLists.txt  README.md  kuznyechik.sln
kuznyechik/: CMakeLists.txt  gost12_15.cpp  gost12_15.h  kuznyechik.vcxproj  kuznyechik.vcxproj.filters  main.cpp
